WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159685
REGRESSION (
r202509
): media controls controls enabled AirPlay placeholder is shown
https://bugs.webkit.org/show_bug.cgi?id=159685
Summary
REGRESSION (r202509): media controls controls enabled AirPlay placeholder is ...
Eric Carlson
Reported
2016-07-12 12:54:19 PDT
Don't force the standard controls to be visible when showing the AirPlay placeholder.
Attachments
Proposed patch.
(12.47 KB, patch)
2016-07-12 14:16 PDT
,
Eric Carlson
dino
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-yosemite
(897.79 KB, application/zip)
2016-07-12 15:05 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-yosemite-wk2
(941.10 KB, application/zip)
2016-07-12 15:08 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews113 for mac-yosemite
(1.49 MB, application/zip)
2016-07-12 15:12 PDT
,
Build Bot
no flags
Details
Updated patch.
(12.48 KB, patch)
2016-07-12 18:03 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch for landing.
(12.47 KB, patch)
2016-07-12 21:21 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-07-12 12:54:55 PDT
<
rdar://problem/27198899
>
Eric Carlson
Comment 2
2016-07-12 14:16:49 PDT
Created
attachment 283447
[details]
Proposed patch.
Build Bot
Comment 3
2016-07-12 15:05:15 PDT
Comment on
attachment 283447
[details]
Proposed patch.
Attachment 283447
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1670540
New failing tests: fullscreen/video-controls-drag.html fullscreen/video-controls-rtl.html fullscreen/video-controls-override.html
Build Bot
Comment 4
2016-07-12 15:05:19 PDT
Created
attachment 283453
[details]
Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-07-12 15:08:16 PDT
Comment on
attachment 283447
[details]
Proposed patch.
Attachment 283447
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1670550
New failing tests: fullscreen/video-controls-drag.html fullscreen/video-controls-rtl.html fullscreen/video-controls-override.html
Build Bot
Comment 6
2016-07-12 15:08:20 PDT
Created
attachment 283456
[details]
Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-07-12 15:12:46 PDT
Comment on
attachment 283447
[details]
Proposed patch.
Attachment 283447
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1670548
New failing tests: fullscreen/video-controls-drag.html fullscreen/video-controls-rtl.html fullscreen/video-controls-override.html
Build Bot
Comment 8
2016-07-12 15:12:50 PDT
Created
attachment 283457
[details]
Archive of layout-test-results from ews113 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-yosemite Platform: Mac OS X 10.10.5
Eric Carlson
Comment 9
2016-07-12 18:03:51 PDT
Created
attachment 283482
[details]
Updated patch.
Eric Carlson
Comment 10
2016-07-12 21:21:19 PDT
Created
attachment 283488
[details]
Patch for landing.
WebKit Commit Bot
Comment 11
2016-07-12 21:51:00 PDT
Comment on
attachment 283488
[details]
Patch for landing. Clearing flags on attachment: 283488 Committed
r203151
: <
http://trac.webkit.org/changeset/203151
>
Ahmad Saleem
Comment 12
2022-10-25 13:26:15 PDT
Landed and didn't backed out.
https://github.com/WebKit/WebKit/commit/b8d4bcf66e28bb0e2e3f4168bf1e06059a74e1ae
Marking this as "RESOLVED FIXED".
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug