REGRESSION (r202509): media controls controls enabled AirPlay placeholder is shown https://bugs.webkit.org/show_bug.cgi?id=159685 <rdar://problem/27198899>

Reviewed by Dean Jackson.

Source/WebCore:

Test: media/controls/airplay-controls.html

* Modules/mediacontrols/mediaControlsApple.js:
(Controller.prototype.shouldShowControls): Split some of the logic out of shouldHaveControls.
(Controller.prototype.shouldHaveControls): Having controls != showing controls.
(Controller.prototype.updateControls): Call shouldShowControls, not shouldHaveControls.
(Controller.prototype.updateWirelessPlaybackStatus): Add 'appletv' to the class when active.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::getCurrentMediaControlsStatus): Call ensureMediaControlsShadowRoot
in case the controls haven't been created yet.

LayoutTests:

* media/controls/airplay-controls-expected.txt: Added.
* media/controls/airplay-controls.html: Added.

* media/controls/controls-test-helpers.js:
(ControlsTest.prototype.get currentState): Put a try block around the call to get the current
status in case it fails.

* platform/mac/TestExpectations: Skip the new test on Yosemite where AirPlay doesn't work.


Canonical link: https://commits.webkit.org/177851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203151 268f45cc-cd09-0410-ab3c-d52691b4dbfc